--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+
+# Yeoman stuff
+node_modules
+dist
+.tmp
+.sass-cache
+bower_components
+test/bower_components
