--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/bnhovde/AnalogueIO",
   "dependencies": {
-    "johnny-five": "^0.8.43"
+    "express": "^4.11.2",
+    "johnny-five": "^0.8.43",
+    "socket.io": "^1.3.4"
   },
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
